--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,8 @@ services:
       - "3309:3306"
     volumes:
       - mysql_data:/var/lib/mysql
+    networks:
+      - mynetwork
 
   couchdb:
     image: couchdb:3.2.1
@@ -21,25 +23,32 @@ services:
     ports:
       - "5985:5984"
     environment:
-      COUCHDB_USER: root
+      COUCHDB_USER: admin
       COUCHDB_PASSWORD: root
     volumes:
       - couchdb_data:/opt/couchdb/data
 
   app:
-    build: .
+    build:
+      context: .
+      dockerfile: Dockerfile
     command: bundle exec rails s -b 0.0.0.0
     environment:
       - BUNDLE_PATH=/bundle
     ports:
-      - 3006:3000
+      - 3009:3000
     # links:
-    #   - db
+    #   - mysql_5_6
     volumes:
       - bundle:/bundle:Z
       - .:/apps/nlims_controller:Z
+    restart: always
 
 volumes:
   mysql_data:
   couchdb_data:
   bundle:
+
+networks:
+  mynetwork:
+    external: true
